[tool.poetry]
name = "bot-brasileirao"
version = "0.1.0"
description = ""
authors = ["Danrley Pereira <Danrley.Pereira@epicor.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
idna = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
